--- a/accounts/templates/accounts/password_change_done.html
+++ b/accounts/templates/accounts/password_change_done.html
@@ -1,19 +1,30 @@
-{% include 'layouts/default/head.html' %}
-
+{% extends 'base.html' %}
 {% load bootstrap4 %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Change{% endblock %}</title>
 
-<div class="container-fluid">
-
-    <div class="mt-3">
-
-        <h4>Password change</h4>
-
-        <div class="alert alert-success">
+</head>
+{% block body %}
+    <div class="header forms text-center" style="height: 70px">
+    <h3><a href="/" style=" color: #F5DD5D; font-size: 22px"> ForeCast Password Reset Done</a></h3>
+    </div>
+    <div class="row">
+    <div id="loginbox" style="margin-top:25px;" class="mainbox col-md-12  col-sm-12 col-lg-12  text-center">
+        <div class=" col-md-3 col-sm-6"></div>
+         <div class="alert alert-success col-md-6 col-sm-8">
             Your password was changed.
         </div>
-
-    </div>
-
+        <div class=" col-md-3 col-sm-6"></div>
 </div>
+</div>
+    <script type="text/javascript">
+setTimeout(function() {
+    location.href = '/';
+},2000);
+</script>
 
-{% include 'layouts/default/foot.html' %}
+
+{% endblock %}
