--- a/accounts/templates/accounts/password_reset.html
+++ b/accounts/templates/accounts/password_reset.html
@@ -1,23 +1,56 @@
-{% include 'layouts/default/head.html' %}
-
+{% extends 'base.html' %}
 {% load bootstrap4 %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Signup{% endblock %}</title>
 
-<div class="container-fluid">
-
-    <div class="mt-3">
-
-        <h4>Password reset</h4>
-
-        <form method="post">
-            {% csrf_token %}
-
-            {% bootstrap_form form %}
-
-            <button class="btn btn-primary">Submit</button>
-        </form>
-
+</head>
+{% block body %}
+    <div class="header forms text-center" style="height: 70px">
+    <h3><a href="/" style=" color: #F5DD5D; font-size: 22px"> ForeCast</a></h3>
     </div>
 
-</div>
+                <div id="loginbox" style="margin-top:25px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <div class="panel-title">Password Reset</div>
 
-{% include 'layouts/default/foot.html' %}
+                        </div>
+                        <div style="padding-top:5px" class="panel-body">
+                            <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+                            <form id="loginform" class="form-horizontal" method="post" style="padding: 15px">
+                                     {% csrf_token %}
+
+                                    {% bootstrap_form form  %}
+
+                                <div class="input-group">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input id="login-remember" type="checkbox" name="remember" value="1">
+                                            Remember me
+                                        </label>
+                                    </div>
+                                </div>
+                                <div style="margin-top:10px" class="form-group">
+                                    <!-- Button -->
+                                    <div class="col-sm-12 controls">
+                                        <button type="submit" id="btn-login" href="#" class="btn btn-success" >Submit</button>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-md-12 control">
+                                        <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
+                                            Don't have an account!
+                                            <a href="{% url 'register' %}">
+                                                Sign Up Here
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+{% endblock %}
