--- a/accounts/templates/accounts/password_reset_complete.html
+++ b/accounts/templates/accounts/password_reset_complete.html
@@ -4,16 +4,20 @@
 
 <div class="container-fluid">
 
-    <div class="mt-3">
+   {% extends 'base.html' %}
+{% load bootstrap4 %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Signup{% endblock %}</title>
 
-        <h4>Password reset</h4>
-
-        <div class="alert alert-success">
-            Your password has been set. You may go ahead and log in now.
-        </div>
-
+</head>
+{% block body %}
+    <div class="header forms text-center" style="height: 70px">
+    <h3><a href="/" style=" color: #F5DD5D; font-size: 22px"> ForeCast</a></h3>
     </div>
 
-</div>
+{% endblock %}
 
-{% include 'layouts/default/foot.html' %}
+</html>
