--- a/accounts/templates/accounts/password_reset_done.html
+++ b/accounts/templates/accounts/password_reset_done.html
@@ -1,25 +1,47 @@
-{% include 'layouts/default/head.html' %}
-
+{% extends 'base.html' %}
 {% load bootstrap4 %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Password Change{% endblock %}</title>
 
-<div class="container-fluid">
-
-    <div class="mt-3">
-
-        <h4>Password reset</h4>
-
-        <div class="alert alert-success">
-            We've emailed you instructions for setting your password, if an account exists with the email you entered.
-            You should receive them shortly.
-        </div>
-
-        <div class="alert alert-info">
-            If you don't receive an email, please make sure you've entered the address you registered with,
-            and check your spam folder.
-        </div>
-
+</head>
+{% block body %}
+    <div class="header forms text-center" style="height: 70px">
+        <h3><a href="/" style=" color: #F5DD5D; font-size: 22px"> ForeCast</a></h3>
     </div>
+    <div id="loginbox" style="margin-top:25px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <div class="panel-title">Password Change</div>
 
-</div>
+            </div>
+            <div style="padding-top:5px" class="panel-body">
+                <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+                <div class="alert alert-success">
+                    We've emailed you instructions for setting your password, if an account exists with the email you
+                    entered.
+                    You should receive them shortly.
+                </div>
 
-{% include 'layouts/default/foot.html' %}
+                <div class="alert alert-info">
+                    If you don't receive an email, please make sure you've entered the address you registered with,
+                    and check your spam folder.
+                </div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript">
+setTimeout(function() {
+    location.href = '/';
+},2000);
+</script>
+{% endblock %}
+
+
+
+
+
+
+
