--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -33,7 +33,7 @@
                                                     {% if request.user.is_authenticated %}
                                                          <li>
                                                                 <a href="{% url 'password_change' %}">
-                                                                        <i class="fa fa-cog"></i>
+                                                                        <i class="ace-icon fa fa-cog"></i>
                                                                         Change Password
                                                                 </a>
                                                         </li>
@@ -42,7 +42,7 @@
 
                                                         <li>
                                                             <a href="{% url 'logout' %}" target="_self">
-                                                                        <i class=" fa fa-power-off"></i>
+                                                                        <i class="ace-icon fa fa-power-off"></i>
                                                                         Logout
                                                                 </a>
                                                         </li>
