--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -85,15 +85,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand web-name" href="#">ForeCast</a>
+                <a class="navbar-brand web-name" href="/">ForeCast</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#"><span class="glyphicon glyphicon-dashboard"></span>&nbsp;&nbsp;Dashboard</a>
                     </li>
-                    <li><a href="#">Age</a></li>
-                    <li><a href="#">Gender</a></li>
-                    <li><a href="#">Geo</a></li>
+                    <li><a href="#"><span class=" glyphicon glyphicon-stats"></span>  Production Stats</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-grain"></span>  Farmer Dashboard</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-cloud"></span>  Advisory Panel</a></li>
                 </ul>
             </div>
         </div>
@@ -107,8 +107,8 @@
                 <ul class="nav nav-pills nav-stacked">
                     <li class="active" id="active"><a href="#"><span class="glyphicon glyphicon-dashboard"></span>&nbsp;&nbsp;Dashboard</a>
                     </li>
-                    <li><a href="#">Production Statistics</a></li>
-                    <li><a href="#">Farmer Dashboard</a></li>
+                    <li><a href="#"><span class=" glyphicon glyphicon-stats"></span> Production Statistics</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-grain"></span> Farmer Dashboard</a></li>
                     <li><a href="#"></a></li>
                 </ul>
                 <br>
@@ -160,16 +160,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-8">
+                    <div class="col-sm-12">
                         <div class="well">
                             <p>Text</p>
                         </div>
                     </div>
-                    <div class="col-sm-4">
-                        <div class="well">
-                            <p>Text</p>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
