--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -144,6 +144,9 @@
                         </div>
                         <div class="col-sm-4 right-container">
                             <div id="aside">
+                                <div class="row">
+                                    <div class="col-sm-12 text-center"><h3>Locations</h3></div>
+                                </div>
 
                             </div>
                         </div>
