--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -145,10 +145,15 @@
                         <div class="col-sm-4 right-container">
                             <div id="aside">
                                 <div class="row">
-                                    <div class="col-sm-12 text-center"><h3>Locations</h3></div>
+                                    <div class="col-sm-12 text-center"><h3>Climatic Stats</h3></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">April May Rains</div>
+                                    <div class="col-sm-6">122mm</div>
                                 </div>
 
-                            </div>
+
+                                </div>
                         </div>
                     </div>
 
