--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -125,7 +125,14 @@
                         <br>
                     </div>
                     <div class="col-sm-12 text-center meta-div">
-                        <h3>Heloooo Am coming right now</h3>
+                        <ul>
+                            <li><div class="fa fa-facebook">Facebook</div></li>
+                            <li><div class="fa fa-twitter">Facebook</div></li>
+                            <li><div class="fa fa-instagram">Facebook</div></li>
+                        </ul>
+
+
+
                     </div>
                 </div>
 
@@ -149,11 +156,26 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-6">April May Rains</div>
+                                    <div class="col-sm-6">122mm</div><br>
+                                    <div class="col-sm-6">May June  Rains</div>
+                                    <div class="col-sm-6">122mm</div><br>
+                                    <div class="col-sm-6">July August Rains</div>
                                     <div class="col-sm-6">122mm</div>
                                 </div>
-
+                                <div class="row">
+                                    <div class="col-sm-12 text-center" id="title">Estimated Crop Yield</div>
+                                </div>
+                                        <div class="row">
+                                            <div class="col-sm-5 text-info center">Wheat: </div><div class="col-sm-3 ">15Bag</div><div class="col-sm-4">Per Ha</div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-sm-5 text-info center">Wheat: </div><div class="col-sm-3 ">15Bag</div><div class="col-sm-4">Per Ha</div>
+                                        </div>
+                                <div class="row">
+                                    <div class="col-sm-12">Productions By Regions</div>
 
                                 </div>
+                            </div>
                         </div>
                     </div>
 
@@ -184,6 +206,9 @@
 
             </div>
         </div>
+    <div class="foote row">
+
+    </div>
     </div>
 
 
