--- a/main/static/main/css/custom.css
+++ b/main/static/main/css/custom.css
@@ -129,3 +129,13 @@ body{
     height: 350px;
     background-color: #ffffff;
 }
+#title{
+    margin-top: 7px;
+}
+.footer {
+    position: fixed;
+    height: 60px;
+    bottom: 0;
+    width: 100%;
+    background-color: #1b6d85;
+}
