--- a/main/templates/famers_dashboard.html
+++ b/main/templates/famers_dashboard.html
@@ -1,5 +1,8 @@
 <div class="col-sm-8 left-container">
                             <div class="graphs" id="graph">
+                            <div class="row">
+                                <div class="col-sm-12"><h3>Farmers Home</h3></div>
+                            </div>
                             </div>
                         </div>
                         <div class="col-sm-4 right-container">
@@ -30,7 +33,7 @@
                                    </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-12">Productions By Regions</div>
+                                    <div class="col-sm-12">Prediction By Regions</div>
 
                                 </div>
                             </div>
