--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load bootstrap4 %}
+{% load bootstrap3 %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +29,7 @@
                                     <!-- Button -->
                                     <div class="col-sm-12 controls">
                                         <button type="submit" id="btn-login" href="#" class="btn btn-success" >Sign Up </button>
-                                        <a id="btn-fblogin" href="#" class="btn btn-primary">Login with Facebook</a>
+                                        <a id="btn-fblogin" href="" class="btn btn-primary">Login with Facebook</a>
 
                                     </div>
                                 </div>
