--- a/main/static/main/css/custom.css
+++ b/main/static/main/css/custom.css
@@ -126,8 +126,12 @@ body{
 }
 .meta-div{
     width: 100%;
-    height: 350px;
+    padding: 35px 35px;
     background-color: #ffffff;
+    
+}
+.meta-div ul li{
+    line-height: 25px;
 }
 #title{
     margin-top: 7px;
